Create and Style Attendance Section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> 
         <nav>
             <ul>
+                <li><a href="#attend">Attendance</a></li>
                 <li><a href="#goals">Meeting Goals</a></li>
                 <li><a href="#announcements">Announcements</a></li>
                 <li><a href="#updates">Subteam Updates</a></li>
@@ -16,6 +17,42 @@
     </header>
     <main>
         <h1>Taking Over The World Meeting #12 Minutes</h1>
+        <hr>
+        <section id="attend">
+            <h2>Attendance</h2>
+            <ul>
+                <li>
+                    <div>
+                        <h3>Present</h3>
+                        <ol>
+                            <li>Barack Obama</li>
+                            <li>Donna Strickland</li>
+                            <li>Tim Horton</li>
+                            <li>Ariana Grande</li>
+                            <li>Sally <span>(<i>from Cars</i>)</span></li>
+                            <li><b>Kabir Vats</b></li>
+                            <li>Sachin Tendulkar</li>
+                            <li>Remy Ratattoille <span>(<i>from Ratattoille</i>)</span></li>
+                            <li>Pradeep  Kohsla</li>
+                            <li>Tom <span>(<i>from Tom and Jerry</i>)</span></li>
+                            <li>Hillary Clinton</li>
+                            <li>Ye Wenjie <span>(<i>from The Three Body Problem</i>)</span></li>
+                        </ol>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <h3>Absent</h3>
+                        <ol>
+                            <li>Kanye West</li>
+                            <li>Casper the Friendly Ghost</li>
+                        </ol>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <hr>
+        
         <h2 id="goals">Meeting Goals</h2>
         <h2 id="announcements">Announcements</h2>
         <h2 id="updates">Subteam Updates</h2>
