--- a/index.html
+++ b/index.html
@@ -52,11 +52,41 @@
             </ul>
         </section>
         <hr>
-        
-        <h2 id="goals">Meeting Goals</h2>
-        <h2 id="announcements">Announcements</h2>
-        <h2 id="updates">Subteam Updates</h2>
-        <h2 id="discussion">Discussion Notes</h2>
+        <section id="goals">
+            <h2>Meeting Goals</h2>
+            <ul>
+                <li><p>Find out why<br> Sally <br>'s computer creates a new line every time she presses "y<br>"</p></li>
+                <li>Determine ways to use Tom's solution to world hunger to gain power</li>
+                <li>Work on <em>EMBRACING EXPRESSIVENESS</em> when it comes to branding</li>
+                <li>Finalize strategy for capturing Greenland</li>
+            </ul>
+        </section>
+        <section id="announcements">
+            <h2>Announcements</h2>
+            <ol>
+                <li>
+                    <p><b>Former President Barack Obama has determined a way to dissolve glass into sand</b></p>
+                    <details><p>Barack Obama, the former President turned visionary, stumbled upon a game-changing 
+                        method while casually strolling along the serene shores of Hawaii. Picture him, 
+                        captivated by the dance of sunlight on the translucent grains of sand, 
+                        when suddenly, a spark of inspiration ignites. In a burst of curiosity, 
+                        he embarks on a journey of experimentation and collaboration with top researchers, 
+                        delving into the intricate world of glass transformation. Through twists and turns
+                        and flashes of insight, he unveils a groundbreaking technique: the ability to dissolve glass into sand.</p></details>
+                </li>
+                <li>
+                    <p><b>Kanye West and Casper the Friendly Ghost are stuck at the bottom of a well in Peru</b></p>
+                    <details><p>Kanye West and Casper the Friendly Ghost find themselves in a predicament of cosmic proportions: stranded at the bottom of a well in Northern Peru. How they got there remains a mystery, but their absence from the meeting is undeniable. As they exchange bewildered glances in the dim light of the well, Kanye's trademark confidence clashes amusingly with Casper's ever-cheerful demeanor. Despite their otherworldly circumstances, they bond over shared frustration and a touch of humor, wondering how on earth they'll explain this one to their colleagues. Alas, until they figure out a way to escape their unexpected underground abode, the meeting will have to proceed without them.                    </p></details>
+                </li>
+            </ol>
+        </section>
+        <section id="updates">
+            <h2>Subteam Updates</h2>
+            <ol>
+
+            </ol>
+        </section>
+        <h2 id="discussion">Discussion</h2>
         <h2 id="action">Action Items</h2>
     </main>
 </html>
