--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                 <li><i>Tom</i>: Meow, well, by controlling the world's cheese supply, we'll have leverage over every nation. They'll have to bow to our dairy dominance!</li>
                 <li><i>Ye Wenjie</i>: It sounds like a plan straight out of a cheesy movie.</li>
                 <li><i>Barack Obama</i>: Alright, let's explore more practical ways to address world hunger and gain influence on the global stage.</li>
+                <li><img src="images\RemyDream.png" alt="Lots of Cheese in a Pile"></li>
                 <br>
                 <li><i>Barack Obama</i>: Moving on to our next topic: embracing expressiveness in branding. How can we make our initiatives more engaging and relatable to the public?</li>
                 <li><i>Ariana Grande</i>: Well, I think we should bring more flair and excitement to our branding. Maybe add some sparkle, a little pizzazz</li>
@@ -133,6 +134,7 @@
                 <li><i>Ariana Grande</i>: How about we dazzle them with a star-studded concert? I could headline, of course, and we could throw in some other A-listers to sweeten the deal.</li>
                 <li><i>Ye Wenjie</i>: Or we could unleash a cyber attack, crippling their infrastructure and forcing them into submission.</li>
                 <li><i>Kabir Vats</i>: Let's go with that.</li>
+                <li><video><source src="images\video.mp4" type="video/mp4"></video></li>
             </ul>
         </section>
         <hr>
