Changes to audio

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                             <li>Ariana Grande</li>
                             <li>Sally <span>(<i>from Cars</i>)</span></li>
                             <li><b>Kabir Vats</b></li>
+                            <ul>
+                                <li><audio controls><source src="images\audio.mp3" type="audio/mp3"></audio></li>
+                            </ul>
                             <li>Sachin Tendulkar</li>
                             <li>Remy Ratattoille <span>(<i>from Ratattoille</i>)</span></li>
                             <li>Pradeep  Kohsla</li>
@@ -134,7 +137,7 @@
                 <li><i>Ariana Grande</i>: How about we dazzle them with a star-studded concert? I could headline, of course, and we could throw in some other A-listers to sweeten the deal.</li>
                 <li><i>Ye Wenjie</i>: Or we could unleash a cyber attack, crippling their infrastructure and forcing them into submission.</li>
                 <li><i>Kabir Vats</i>: Let's go with that.</li>
-                <li><video><source src="images\video.mp4" type="video/mp4"></video></li>
+                <li><video controls="controls autoplay"><source src="images\video.mp4" type="video/mp4"></video></li>
             </ul>
         </section>
         <hr>
@@ -147,5 +150,8 @@
                 <li><h3>Cyber Attack Greenland</h3></li>
             </ul>
         </section>
+        <form>
+            
+        </form>
     </main>
 </html>
