--- a/index.html
+++ b/index.html
@@ -151,7 +151,36 @@
             </ul>
         </section>
         <form>
-            
+            <fieldset>
+                Are you cool? <input type="checkbox">
+                <br>
+                You sure? <input type="radio">
+                <br>
+                Type your college:<input type="text" list="Colleges">
+                <br>
+                When did you become cool?<input type="date">
+                <br>
+                Descibe your coolness:<br><textarea></textarea>
+                <br>
+                <datalist id="Colleges">
+                    <option value="Revelle"></option>
+                    <option value="Muir"></option>
+                    <option value="Marshall"></option>
+                    <option value="Warren"></option>
+                    <option value="Eleanor Roosevelt College"></option>
+                    <option value="Sixth"></option>
+                    <option value="Seventh"></option>
+                    <option value="Eighth"></option>
+                </datalist>
+                Favorite coin face:
+                <br>
+                <select>
+                    <option value="heads">Heads</option>
+                    <option value="tails">Tails</option>
+                </select>
+                <br>
+                <button type="button">I do nothing!</button>
+            </fieldset>
         </form>
     </main>
 </html>
