Fixed some W3 errors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <header>
         <title>Team "Taking Over The World" Meeting #12</title>
-        <meta charset ="UTF-8"> 
+        <meta> 
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> 
         <nav>
             <ul>
@@ -32,7 +32,7 @@
                             <li>Sally <span>(<i>from Cars</i>)</span></li>
                             <li><b>Kabir Vats</b></li>
                             <ul>
-                                <li><audio controls><source src="images\audio.mp3" type="audio/mp3"></audio></li>
+                                <li><audio controls><source src="images/audio.mp3" type="audio/mp3"></audio></li>
                             </ul>
                             <li>Sachin Tendulkar</li>
                             <li>Remy Ratattoille <span>(<i>from Ratattoille</i>)</span></li>
@@ -108,7 +108,8 @@
                 <li><i>Sally</i>: <i>Beep</i> Thank you, Tim. I really appreciate it.</li>
                 <li><i>Sachin Tendulkar</i>: You know, I once had a similar problem with my cricket bat. Every time I swung it, it made a strange noise.</li>
                 <li><i>Barack Obama</i>: Well, let's hope Tim can fix Sally's computer quicker than you fixed your bat, Sachin.</li>
-                <br>
+            </ul>
+            <ul>
                 <li><i>Barack Obama</i>: Now, onto Tom's brilliant idea to solve world hunger. Tom, care to explain?</li>
                 <li><i>Tom</i>: Meow, thank you, Mr. President. We'll use cheese to feed the world!</li>
                 <li><i>Hillary Clinton</i>: Cheese, Tom? Really?</li>
@@ -121,14 +122,16 @@
                 <li><i>Tom</i>: Meow, well, by controlling the world's cheese supply, we'll have leverage over every nation. They'll have to bow to our dairy dominance!</li>
                 <li><i>Ye Wenjie</i>: It sounds like a plan straight out of a cheesy movie.</li>
                 <li><i>Barack Obama</i>: Alright, let's explore more practical ways to address world hunger and gain influence on the global stage.</li>
-                <li><img src="images\RemyDream.png" alt="Lots of Cheese in a Pile"></li>
-                <br>
+                <li><img src="images/RemyDream.png" alt="Lots of Cheese in a Pile"></li>
+            </ul>
+            <ul>
                 <li><i>Barack Obama</i>: Moving on to our next topic: embracing expressiveness in branding. How can we make our initiatives more engaging and relatable to the public?</li>
                 <li><i>Ariana Grande</i>: Well, I think we should bring more flair and excitement to our branding. Maybe add some sparkle, a little pizzazz</li>
                 <li><i>Barack Obama</i>: That's a great idea, Ariana. We want our initiatives to stand out and capture people's attention.</li>
                 <li><i>Ariana Grande</i>: Oh, you know me, Mr. President. I'm all about standing out and capturing attention.</li>
                 <li><i>Barack Obama</i>: Alright, let's brainstorm ways to infuse our branding with more personality and energy and have them ready by next meeting.</li>
-                <br>
+            </ul>
+            <ul>
                 <li><i>Barack Obama</i>: Alright, let's focus on our strategy for capturing Greenland. Any ideas?</li>
                 <li><i>Pradeep Kohsla</i>: Well, we could offer them economic incentives and infrastructure development projects to sway their allegiance. Or, we could just buy them out with our fat wallets, if you catch my drift.</li>
                 <li><i>Hillary Clinton</i>: Or we could take a more aggressive approach. We have the military might to simply seize control if negotiations fail.</li>
@@ -137,7 +140,7 @@
                 <li><i>Ariana Grande</i>: How about we dazzle them with a star-studded concert? I could headline, of course, and we could throw in some other A-listers to sweeten the deal.</li>
                 <li><i>Ye Wenjie</i>: Or we could unleash a cyber attack, crippling their infrastructure and forcing them into submission.</li>
                 <li><i>Kabir Vats</i>: Let's go with that.</li>
-                <li><video controls="controls autoplay"><source src="images\video.mp4" type="video/mp4"></video></li>
+                <li><video controls><source src="images/video.mp4" type="video/mp4"></video></li>
             </ul>
         </section>
         <hr>
