--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
+    <head>
         <title>Team "Taking Over The World" Meeting #12</title>
         <meta> 
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> 
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    </head>
+    <header> 
         <nav>
             <ul>
                 <li><a href="#attend">Attendance</a></li>
