--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Team "Taking Over The World" Meeting #12</title>
-        <meta> 
+        <meta charset="utf-8"> 
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     </head>
     <header> 
@@ -33,9 +33,9 @@
                             <li>Ariana Grande</li>
                             <li>Sally <span>(<i>from Cars</i>)</span></li>
                             <li><b>Kabir Vats</b></li>
-                            <ul>
+                            <li><ul>
                                 <li><audio controls><source src="images/audio.mp3" type="audio/mp3"></audio></li>
-                            </ul>
+                            </ul></li>
                             <li>Sachin Tendulkar</li>
                             <li>Remy Ratattoille <span>(<i>from Ratattoille</i>)</span></li>
                             <li>Pradeep  Kohsla</li>
