--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Team "Taking Over The World" Meeting #12</title>
         <meta charset="utf-8"> 
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <header> 
         <nav>
