Add background and text colors for headers

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <hr>
         <section id="updates">
             <h2>Subteam Updates</h2>
-            <h3><b><i>Delayed to next meeting due to <a href="https://www.atsdr.cdc.gov/asbestos/health_effects_asbestos.html">concerns over asbestos</a></i></b></h3>
+            <h3 id="warning"><b><i>Delayed to next meeting due to <a href="https://www.atsdr.cdc.gov/asbestos/health_effects_asbestos.html">concerns over asbestos</a></i></b></h3>
         </section>
         <hr>
         <section id="discussion">
@@ -156,37 +156,39 @@
                 <li><h3>Cyber Attack Greenland</h3></li>
             </ul>
         </section>
-        <form>
-            <fieldset>
-                Are you cool? <input type="checkbox">
-                <br>
-                You sure? <input type="radio">
-                <br>
-                Type your college:<input type="text" list="Colleges">
-                <br>
-                When did you become cool?<input type="date">
-                <br>
-                Descibe your coolness:<br><textarea></textarea>
-                <br>
-                <datalist id="Colleges">
-                    <option value="Revelle"></option>
-                    <option value="Muir"></option>
-                    <option value="Marshall"></option>
-                    <option value="Warren"></option>
-                    <option value="Eleanor Roosevelt College"></option>
-                    <option value="Sixth"></option>
-                    <option value="Seventh"></option>
-                    <option value="Eighth"></option>
-                </datalist>
-                Favorite coin face:
-                <br>
-                <select>
-                    <option value="heads">Heads</option>
-                    <option value="tails">Tails</option>
-                </select>
-                <br>
-                <button type="button">I do nothing!</button>
-            </fieldset>
-        </form>
+        <div style="background-color: blue">
+            <form>
+                <fieldset>
+                    Are you cool? <input type="checkbox">
+                    <br>
+                    You sure? <input type="radio">
+                    <br>
+                    Type your college:<input type="text" list="Colleges">
+                    <br>
+                    When did you become cool?<input type="date">
+                    <br>
+                    Descibe your coolness:<br><textarea></textarea>
+                    <br>
+                    <datalist id="Colleges">
+                        <option value="Revelle"></option>
+                        <option value="Muir"></option>
+                        <option value="Marshall"></option>
+                        <option value="Warren"></option>
+                        <option value="Eleanor Roosevelt College"></option>
+                        <option value="Sixth"></option>
+                        <option value="Seventh"></option>
+                        <option value="Eighth"></option>
+                    </datalist>
+                    Favorite coin face:
+                    <br>
+                    <select>
+                        <option value="heads">Heads</option>
+                        <option value="tails">Tails</option>
+                    </select>
+                    <br>
+                    <button type="button">I do nothing!</button>
+                </fieldset>
+            </form>
+        </div>
     </main>
 </html>
