--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </nav>
     </header>
     <main>
-        <h1>Taking Over The World Meeting #12 Minutes</h1>
+        <div class="title">
+            <h1>Taking Over The World Meeting #12 Minutes</h1>
+        </div>
         <hr>
         <section id="attend">
             <h2>Attendance</h2>
@@ -68,26 +70,30 @@
             </ul>
         </section>
         <hr>
-        <section id="announcements">
+        <section id="announcements" class="announcements">
             <h2>Announcements</h2>
             <ol>
                 <li>
-                    <p><b>Former President Barack Obama has determined a way to dissolve glass into sand</b></p>
-                    <details>
-                        <summary>More Info</summary>
-                        <p>Barack Obama, the former President turned visionary, stumbled upon a game-changing 
-                        method while casually strolling along the serene shores of Hawaii. Picture him, 
-                        captivated by the dance of sunlight on the translucent grains of sand, 
-                        when suddenly, a spark of inspiration ignites. In a burst of curiosity, 
-                        he embarks on a journey of experimentation and collaboration with top researchers, 
-                        delving into the intricate world of glass transformation. Through twists and turns
-                        and flashes of insight, he unveils a groundbreaking technique: the ability to dissolve glass into sand.</p></details>
+                    <div>
+                        <p><b>Former President Barack Obama has determined a way to dissolve glass into sand</b></p>
+                        <details>
+                            <summary>More Info</summary>
+                            <p>Barack Obama, the former President turned visionary, stumbled upon a game-changing 
+                            method while casually strolling along the serene shores of Hawaii. Picture him, 
+                            captivated by the dance of sunlight on the translucent grains of sand, 
+                            when suddenly, a spark of inspiration ignites. In a burst of curiosity, 
+                            he embarks on a journey of experimentation and collaboration with top researchers, 
+                            delving into the intricate world of glass transformation. Through twists and turns
+                            and flashes of insight, he unveils a groundbreaking technique: the ability to dissolve glass into sand.</p></details>
+                    </div>
                 </li>
                 <li>
-                    <p><b>Kanye West and Casper the Friendly Ghost are stuck at the bottom of a well in Peru</b></p>
-                    <details>
-                        <summary>More Info</summary>
-                        <p>Kanye West and Casper the Friendly Ghost find themselves in a predicament of cosmic proportions: stranded at the bottom of a well in Northern Peru. How they got there remains a mystery, but their absence from the meeting is undeniable. As they exchange bewildered glances in the dim light of the well, Kanye's trademark confidence clashes amusingly with Casper's ever-cheerful demeanor. Despite their otherworldly circumstances, they bond over shared frustration and a touch of humor, wondering how on earth they'll explain this one to their colleagues. Alas, until they figure out a way to escape their unexpected underground abode, the meeting will have to proceed without them.                    </p></details>
+                    <div>
+                        <p><b>Kanye West and Casper the Friendly Ghost are stuck at the bottom of a well in Peru</b></p>
+                        <details>
+                            <summary>More Info</summary>
+                            <p>Kanye West and Casper the Friendly Ghost find themselves in a predicament of cosmic proportions: stranded at the bottom of a well in Northern Peru. How they got there remains a mystery, but their absence from the meeting is undeniable. As they exchange bewildered glances in the dim light of the well, Kanye's trademark confidence clashes amusingly with Casper's ever-cheerful demeanor. Despite their otherworldly circumstances, they bond over shared frustration and a touch of humor, wondering how on earth they'll explain this one to their colleagues. Alas, until they figure out a way to escape their unexpected underground abode, the meeting will have to proceed without them.                    </p></details>
+                    </div>
                 </li>
             </ol>
         </section>
@@ -97,7 +103,7 @@
             <h3><b><i>Delayed to next meeting due to <a href="https://www.atsdr.cdc.gov/asbestos/health_effects_asbestos.html">concerns over asbestos</a></i></b></h3>
         </section>
         <hr>
-        <section id="discussion">
+        <section id="discussion" class="discussion">
             <h2>Discussion</h2>
             <ul>
                 <li><i>Barack Obama</i>: Good morning, everyone. Let's dive into our agenda. Sally, what's the deal with your computer?</li>
@@ -156,37 +162,39 @@
                 <li><h3>Cyber Attack Greenland</h3></li>
             </ul>
         </section>
-        <form>
-            <fieldset>
-                Are you cool? <input type="checkbox">
-                <br>
-                You sure? <input type="radio">
-                <br>
-                Type your college:<input type="text" list="Colleges">
-                <br>
-                When did you become cool?<input type="date">
-                <br>
-                Descibe your coolness:<br><textarea></textarea>
-                <br>
-                <datalist id="Colleges">
-                    <option value="Revelle"></option>
-                    <option value="Muir"></option>
-                    <option value="Marshall"></option>
-                    <option value="Warren"></option>
-                    <option value="Eleanor Roosevelt College"></option>
-                    <option value="Sixth"></option>
-                    <option value="Seventh"></option>
-                    <option value="Eighth"></option>
-                </datalist>
-                Favorite coin face:
-                <br>
-                <select>
-                    <option value="heads">Heads</option>
-                    <option value="tails">Tails</option>
-                </select>
-                <br>
-                <button type="button">I do nothing!</button>
-            </fieldset>
-        </form>
+        <div style="background-color: blue;">
+            <form>
+                <fieldset>
+                    Are you cool? <input type="checkbox">
+                    <br>
+                    You sure? <input type="radio">
+                    <br>
+                    Type your college:<input type="text" list="Colleges">
+                    <br>
+                    When did you become cool?<input type="date">
+                    <br>
+                    Descibe your coolness:<br><textarea></textarea>
+                    <br>
+                    <datalist id="Colleges">
+                        <option value="Revelle"></option>
+                        <option value="Muir"></option>
+                        <option value="Marshall"></option>
+                        <option value="Warren"></option>
+                        <option value="Eleanor Roosevelt College"></option>
+                        <option value="Sixth"></option>
+                        <option value="Seventh"></option>
+                        <option value="Eighth"></option>
+                    </datalist>
+                    Favorite coin face:
+                    <br>
+                    <select>
+                        <option value="heads">Heads</option>
+                        <option value="tails">Tails</option>
+                    </select>
+                    <br>
+                    <button type="button">I do nothing!</button>
+                </fieldset>
+            </form>
+        </div>
     </main>
 </html>
