Add displays, sizing, positioning, variables, fallback

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     </head>
     <header> 
         <nav>
-            <ul>
-                <li><a href="#attend">Attendance</a></li>
-                <li><a href="#goals">Meeting Goals</a></li>
-                <li><a href="#announcements">Announcements</a></li>
-                <li><a href="#updates">Subteam Updates</a></li>
-                <li><a href="#discussion">Discussion Notes</a></li>
-                <li><a href="#action">Action Items</a></li>
-            </ul>
+            <div>
+                <span><a href="#attend">Attendance</a></span>
+                <span><a href="#goals">Meeting Goals</a></span>
+                <span><a href="#announcements">Announcements</a></span>
+                <span><a href="#updates">Subteam Updates</a></span>
+                <span><a href="#discussion">Discussion Notes</a></span>
+                <span><a href="#action">Action Items</a></span>
+            </div>
         </nav>
     </header>
     <main>
@@ -23,41 +23,36 @@
             <h1>Taking Over The World Meeting #12 Minutes</h1>
         </div>
         <hr>
-        <section id="attend">
+        <section id="attend" class="attendance">
             <h2>Attendance</h2>
-            <ul>
-                <li>
-                    <div>
-                        <h3>Present</h3>
-                        <ol>
-                            <li>Barack Obama</li>
-                            <li>Donna Strickland</li>
-                            <li>Tim Horton</li>
-                            <li>Ariana Grande</li>
-                            <li>Sally <span>(<i>from Cars</i>)</span></li>
-                            <li><b>Kabir Vats</b></li>
-                            <li><ul>
-                                <li><audio controls><source src="images/audio.mp3" type="audio/mp3"></audio></li>
-                            </ul></li>
-                            <li>Sachin Tendulkar</li>
-                            <li>Remy Ratattoille <span>(<i>from Ratattoille</i>)</span></li>
-                            <li>Pradeep  Kohsla</li>
-                            <li>Tom <span>(<i>from Tom and Jerry</i>)</span></li>
-                            <li>Hillary Clinton</li>
-                            <li>Ye Wenjie <span>(<i>from The Three Body Problem</i>)</span></li>
-                        </ol>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <h3>Absent</h3>
-                        <ol>
-                            <li>Kanye West</li>
-                            <li>Casper the Friendly Ghost</li>
-                        </ol>
-                    </div>
-                </li>
-            </ul>
+            <article>
+                    <h3>Present</h3>
+                    <ol>
+                        <li>Barack Obama</li>
+                        <li>Donna Strickland</li>
+                        <li>Tim Horton</li>
+                        <li>Ariana Grande</li>
+                        <li>Sally <span>(<i>from Cars</i>)</span></li>
+                        <li><b>Kabir Vats</b></li>
+                        <li><ul>
+                            <li><audio controls><source src="images/audio.mp3" type="audio/mp3"></audio></li>
+                        </ul></li>
+                        <li>Sachin Tendulkar</li>
+                        <li>Remy Ratattoille <span>(<i>from Ratattoille</i>)</span></li>
+                        <li>Pradeep  Kohsla</li>
+                        <li>Tom <span>(<i>from Tom and Jerry</i>)</span></li>
+                        <li>Hillary Clinton</li>
+                        <li>Ye Wenjie <span>(<i>from The Three Body Problem</i>)</span></li>
+                    </ol>
+            </article>
+            <article>
+                <h3>Absent</h3>
+                <ol class="test">
+                    <li>Kanye West</li>
+                    <li>Casper the Friendly Ghost</li>
+                    
+                </ol>
+            </article>
         </section>
         <hr>
         <section id="goals">
